<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menuLatin"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/latin_string"/>
    <item
            android:id="@+id/menuGreek"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/greek_string"/>
    <item
            android:id="@+id/menuMixed"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/mixed_string"/>
    <item
            android:id="@+id/menuExit"
            android:orderInCategory="200"
            android:showAsAction="never"
            android:title="@string/exit"/>

</menu>